--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    <%= simple_form_for [current_user, @review] do |f| %>
+    <%= simple_form_for [@user, @review] do |f| %>
       <%= f.error_notification %>
 
       <div class="form-inputs">
