--- a/app/views/users/profile.html.erb
+++ b/app/views/users/profile.html.erb
@@ -1,127 +1,81 @@
 <% content_for :meta_title, "RemplaMatch - Mon profil - #{current_user.first_name} #{current_user.last_name}" %>
 
-<div class="container" id="user_container">
-  <div class="row">
-    <div class="col-xs-12 col-md-6">
-      <div class="card-profil">
-        <ul class = "list-unstyled doc_resume text-center">
-          <li>
-            <% if current_user.avatar.nil? %>
-              <%= image_tag "placeholder_pic.png", class: "avatar-superextralarge" %>
-            <% else %>
-              <%= image_tag current_user.avatar, class: "avatar-superextralarge " %>
-            <% end %>
-          </li>
-          <li><p><strong>Dr </strong><%= @user.first_name %> <%= @user.last_name %></p></li>
-          <li><i class="fa fa-stethoscope" id="icon-profil"> : <%= @user.speciality %></i></li><hr>
-          <li><i class="fa fa-home" id="icon-profil"> : <%= @user.address %></i></li><hr>
-          <li><i class="fa fa-graduation-cap" id="icon-profil"> : <%= @user.education %></i></li>
-        </ul>
-      </div>
-    </div>
-    <div class="col-xs-12 col-md-6">
-      <div class="calendar-profil">
-        <h4><strong>Choisissez un créneau de remplacement : </strong></h4>
+<div class="container user_container">
+  <div class="row" id="main_user_row">
+    <div class="profile">
 
-      </div>
-    </div>
-  </div>
-</div>
-
-<!-- Modal -->
-<div class="modal fade text-center" id="contacter">
-<!-- Modal content with Sign up form -->
-  <h2>It's working !</h2>
-  <div class="container">
-    <div class="row col-xs-12 col-sm-6 col-sm-offset-3">
-      <div class="form-design background">
-        <div class="text-center" id="form_title">
-          <h2>Information</h2>
-          <p>Ajouter des informations vous concernant pour permettre à votre interlocuteur de mieux vous connaître.</p>
-        </div>
-          <%= simple_form_for(current_user) do |f| %>
-            <%= f.error_notification %>
-            <div id="form-inputs">
-              <%= f.input :address, required: true %>
-              <%= f.input :speciality, required: true, collection: ['Médecine générale', 'Kinésithérapie', 'Autre spécialité'] %>
-              <%= f.input :numero_ordre, required: true %>
+      <div class="card-profile">
+        <div class="col-xs-12 col-md-8">
+          <ul class = "list-unstyled doc_resume text-center">
+            <li>
+              <% if current_user.avatar.nil? %>
+                <%= image_tag "placeholder_pic.png", class: "avatar-superextralarge" %>
+              <% else %>
+                <%= image_tag current_user.avatar, class: "avatar-superextralarge " %>
+              <% end %>
+            </li>
+            <li><H4><strong>Dr </strong><%= current_user.first_name %> <%= current_user.last_name %></H4></li>
+            <li><i class="fa fa-stethoscope" id="icon-profil"> : <%= current_user.speciality %></i></li><hr>
+            <li><i class="fa fa-home" id="icon-profil"> : <%= current_user.address %></i></li><hr>
+            <li><i class="fa fa-graduation-cap" id="icon-profil"> : <%= current_user.education %></i></li>
+          </ul>
+          <div class="description-profil">
+            <div class="col-xs-12">
+              <h4>Présentation :</h4>
+              <% if current_user.presentation.nil? %>
+              <i><p> En attente d'informations de la part du médecin</p></i>
+              <% else %>
+              <h6><%= current_user.presentation %></h6>
+              <%end%>
+              <hr>
             </div>
-            <div class="form-actions text-center">
-              <%= f.button :submit, "Valider", method: :patch, :class => 'btn btn-primary', style: "width: 100%;" %>
+            <div class="col-xs-12">
+              <h4>Cursus et publications :</h4>
+              <% if current_user.publications.nil? %>
+              <i><p> En attente d'informations de la part du médecin</p></i>
+              <% else %>
+              <h6><%= current_user.publications %></h6>
+              <% end %>
+              <hr>
             </div>
-          <% end %>
-          <%= link_to "Finir de compléter son profil", user_path(@user) %>
-      </div>
-    </div>
-  </div>
-</div>
-<br>
-<div class="wrapper-profil">
-  <div class="container">
-    <div class="row">
-      <div class="description-profil">
-        <div class="col-xs-6">
-          <h4>Présentation :</h4>
-          <h6><%= @user.presentation %></h6>
+          </div>
+          <div class="location">
+            <div class="card-acces col-xs-12 col-md-12">
+              <h4>Informations d'accès :</h4>
+              <p><%= current_user.address %></p>
+            </div>
+            <div id="map-user" style="; height: 200px;" class="hidden-xs col-md-12">
+              <script type="text/javascript">
+                <% content_for(:after_js) do %>
+                  <%= javascript_tag do %>
+                    $(document).ready(function() {
+                      handler = Gmaps.build('Google');
+                      handler.buildMap({ internal: { id: 'map-user' } }, function(){
+                        markers = handler.addMarkers(<%= raw @markers.to_json %>);
+                        handler.bounds.extendWith(markers);
+                        handler.fitMapToBounds();
+                        handler.getMap().setZoom(15);
+                      });
+                    });
+                  <% end %>
+                <% end %>
+            </script>
+            </div>
+          </div>
         </div>
-        <div class="col-xs-6">
-          <h4>Cursus et publications :</h4>
-          <h6><%= @user.publications %></h6>
-        </div>
       </div>
-    </div>
-  </div>
-</div>
 
-<div class="container">
-  <div class="row">
-    <div class="col-md-6">
-      <div class="card-acces">
-        <h4>Informations d'accès :</h4>
-        <h5><strong><%= @user.address %></strong></h5>
-        <div></div>
-        <h6>Parking</h6>
-        <h6>Informations supplémentaires</h6>
-        <ul>
-          <li><h6>3 eme étage avec ascenseur</h6></li>
-        </ul>
-      </div>
-    </div>
-    <div class="col-md-6">
-      <div class="card-map">
-        <div id="map-user" style="width: 101%; height: 180px;"></div>
-        <script type="text/javascript">
-          <% content_for(:after_js) do %>
-            <%= javascript_tag do %>
-              $(document).ready(function() {
-                handler = Gmaps.build('Google');
-                handler.buildMap({ internal: { id: 'map-user' } }, function(){
-                  markers = handler.addMarkers(<%= raw @markers.to_json %>);
-                  handler.bounds.extendWith(markers);
-                  handler.fitMapToBounds();
-                  handler.getMap().setZoom(14);
-                });
-              });
-            <% end %>
-          <% end %>
-        </script>
-      </div>
-    </div>
-  </div>
-</div>
-
-<div class="wrapper-profil">
-  <div class="container">
-    <div class="row">
-      <div class="col-xs-12">
-        <div class="description-profil">
-          <h4>Recommandations :</h4>
+      <div id="small_calendar" class="text-center">
+        <div class="col-xs-12 col-md-4">
+            <div class="description-profil grey_card">
+              <h4>Recommandations :</h4>
+                <div class="empty-comment">
+                  <i class="fa fa-comment"></i>
+                  <p>Il n'y a pas encore de recommandation pour cet utilisateur</p>
+                </div>
+            </div>
         </div>
       </div>
     </div>
   </div>
 </div>
-
-
-
-
