--- a/app/assets/stylesheets/pages/_calendar.scss
+++ b/app/assets/stylesheets/pages/_calendar.scss
@@ -43,3 +43,11 @@
 .empty_availabilities > ul {
   padding: 10px;
 }
+.display-status {
+  color: #999999;
+  border: 1px solid #999999;
+  padding: 5px 15px;
+  border-radius: 20px;
+  font-weight: lighter;
+  margin: 0px 230px;
+}
