WIP myprofile page

--- a/app/assets/stylesheets/pages/_user_show.scss
+++ b/app/assets/stylesheets/pages/_user_show.scss
@@ -1,3 +1,6 @@
+h4 {
+  color: $blue;
+}
 .user_container {
   margin-top: 100px;
 }
@@ -68,4 +71,5 @@
 #map-user{
   margin-top: 30px;
   margin-bottom: 60px;
+  margin-left: 15px;
 }
