--- a/app/assets/stylesheets/layout/_utilities.scss
+++ b/app/assets/stylesheets/layout/_utilities.scss
@@ -16,6 +16,9 @@
 .no-padding-left {
   padding-left: 0px !important;
 }
+html, body, #container {
+  height: 100%;
+}
 
 // Backgrounds
 .bg-black {
