--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -56,7 +56,7 @@
       <% end %>
 
         <div class="navbar-name hidden-xs">
-          <%= link_to user_path(current_user) do %>
+          <%= link_to profile_path do %>
             <p><%= current_user.first_name %> <strong><%= current_user.last_name %></strong></p>
           <% end %>
         </div>
@@ -72,7 +72,7 @@
             <% end %>
             <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
               <li>
-                <%= link_to user_path(current_user) do %>
+                <%= link_to profile_path do %>
                   <i class="fa fa-user"></i> <%= t ".profile", default: "Profile" %>
                 <% end %>
               </li>
