--- a/app/views/users/profile.html.erb
+++ b/app/views/users/profile.html.erb
@@ -126,9 +126,16 @@
         <hr>
         <% if current_user.reviews.size > 0 %>
           <h4>
+            <span class="number-of-reviews"><strong>Moyenne : </strong></span>
             <%= ("<i class='fa fa-star fa-yellow'></i>" * current_user.reviews.average(:rating).to_f.round).html_safe %><%= ("<i class='fa fa-star fa-gray'></i>" * (5 - current_user.reviews.average(:rating).to_f.round)).html_safe %>
-            <span class="number-of-reviews"> (<%= current_user.reviews.size%> avis reçus)</span>
+            <span class="number-of-reviews"> (<%= pluralize(current_user.reviews.size, 'avis reçu') %>)</span>
           </h4>
+          <hr>
+          <% current_user.reviews.each do |review| %>
+            <div class="review">
+              <p>"<em><%= review.content %></p></em>" by xxx</p>
+            </div>
+          <% end %>
         <% else %>
         <div class="empty-comment">
           <p>Vous n'avez pas encore reçu d'avis.</p>
