--- a/app/views/users/search_practices.html.erb
+++ b/app/views/users/search_practices.html.erb
@@ -167,8 +167,7 @@
                       <h4>Dr. <%= user.first_name %>  <%= user.last_name %></h4>
                       <% if user.reviews.size > 0 %>
                         <h4>
-                          <%= ("<i class='fa fa-star fa-yellow'></i>" * user.reviews.average(:rating).to_f.round).html_safe %>
-                          <%= ("<i class='fa fa-star fa-gray'></i>" * (5 - user.reviews.average(:rating).to_f.round)).html_safe %>
+                          <%= ("<i class='fa fa-star fa-yellow'></i>" * user.reviews.average(:rating).to_f.round).html_safe %><%= ("<i class='fa fa-star fa-gray'></i>" * (5 - user.reviews.average(:rating).to_f.round)).html_safe %>
                         </h4>
                       <% end %>
                       <h5><%= user.speciality %></h5>
