--- a/app/views/calendars/show.html.erb
+++ b/app/views/calendars/show.html.erb
@@ -2,9 +2,9 @@
 
 <div id="title" class="text-center">
   <% if current_user.has_practice? %>
-  <h3>Mon calendrier de recherches de remplacants</h3>
-    <% else %>
-  <h3>Mon calendrier de recherches de remplacements</h3>
+    <h3>Mon calendrier de recherches de remplacants</h3>
+  <% else %>
+    <h3>Mon calendrier de recherches de remplacements</h3>
   <%end%>
 </div>
 
@@ -31,7 +31,7 @@
           <h4>Les dates où je recherche des remplaçants</h4>
         <% else %>
           <h4>Les dates où je recherche des remplacements</h4>
-        <%end%>
+        <% end %>
         <% if current_user.slots.nil? %>
           <i class="fa fa-calendar-minus-o"></i>
           <div class="empty_availabilities">Vous n'avez pas encore défini de plages de recherches <br> Veuillez remplir votre calendrier ci-dessus et valider vos plages</div>
@@ -49,12 +49,56 @@
         <h4>Les demandes entrantes de remplacement</h4>
         <% if current_user.bookings.nil? %>
           <i class="fa fa-user-md"></i>
-            <div class="empty_availabilities">Vous n'avez pas encore reçu de demandes <br> Commencez par remplir votre calendrier ci-dessus et valider vos plages</div>
-        <!-- MY PENDING BOOKINGS + MY PAST BOOKINGS TO DO  -->
+          <div class="empty_availabilities">Vous n'avez pas encore reçu de demandes <br> Commencez par remplir votre calendrier ci-dessus et valider vos plages</div>
         <% else %>
-          <% current_user.bookings.each do |booking| %>
-            <%= booking.start_date %>
-            <%= booking.slot.user.first_name %>
+        <% end %>
+
+        <% if current_user.has_practice == false %>
+          <!-- Je suis un remplaçant ! -->
+          <% if current_user.bookings.nil? %>
+            <p> Vous n'avez pas encore fait de demande !</p>
+          <% else %>
+            <% current_user.bookings.each do |booking| %>
+              <%= booking.start_date %>
+              <%= booking.slot.user.first_name %>
+              <%# if booking.slot %>
+                <p> "Demande en attente" </p>
+                <br>
+              <%# else %>
+                <%# booking.slots.each do |slot| %>
+                  <%#= slot.status %>
+                  <%#= slot.user.first_name %>
+                <%# end %>
+            <% end %>
+          <% end %>
+        <% else %>
+        <!-- Je suis un cabinet ! -->
+          <% if current_user.slots.first.nil? %>
+            <p> On ne vous a pas encore fait de demande !</p>
+          <% else %>
+            <% current_user.slots.each do |slot| %>
+              <% slot.bookings.each do |booking| %>
+                <% if booking.user.avatar.nil? %>
+                  <%= image_tag "placeholder_pic.png", class: "avatar-large" %>
+                <% else %>
+                  <%= image_tag booking.user.avatar, class: "avatar-superextralarge " %>
+                <% end %>
+                <%= booking.user.first_name %> veut vous remplacer du :
+                <%= booking.start_date %> au
+                <%= booking.end_date %>
+                <%# booking.slots.each do |slot| %>
+                  <%# if slot.status == "pending" %>
+                    <%#= link_to "Valider", confirm_booking_path(booking), method: :patch, class: "btn btn-primary" %>
+                    <%#= link_to "Refuser", reject_booking_path(booking), method: :patch, class: "btn btn-danger" %>
+                  <%# else %>
+                    <div class="display-status">
+                      <%#= slot.status %>
+                      <%# break %>
+                    </div>
+                  <%# end %>
+                <%# end %>
+              <% end %>
+            <% end %>
           <% end %>
         <% end %>
       </div>
