--- a/app/views/users/profile.html.erb
+++ b/app/views/users/profile.html.erb
@@ -30,6 +30,17 @@
             <% if !current_user.has_practice %>
               <li><i class="fa fa-fw fa-file-text-o icon-profile"></i><p>Numéro URSSAF : <%= current_user.numero_ursaff %></p></li>
             <% end %>
+            <li>
+              <i class="fa fa-fw fa-thumbs-up icon-profile"></i>
+              <% if current_user.reviews_i_received.size > 0 %>
+                <p>
+                  <%= ("<i class='fa fa-star fa-yellow'></i>" * current_user.reviews_i_received.average(:rating).to_f.round).html_safe %><%= ("<i class='fa fa-star fa-gray'></i>" * (5 - current_user.reviews_i_received.average(:rating).to_f.round)).html_safe %>
+                  <span class="number-of-reviews"> <%= pluralize(current_user.reviews_i_received.size, 'avis reçu') %></span>
+                </p>
+              <% else %>
+                <p>Aucun avis reçu pour le moment</p>
+              <% end %>
+            </li>
           </ul>
           <br><br>
         </div>
@@ -52,7 +63,7 @@
               <li><i class="fa fa-fw fa-home icon-profile"></i><p><%= human_housing(current_user.housing) %></p></li>
               <li>
                 <i class="fa fa-fw fa-money icon-profile"></i>
-                <p id="p-comm">Rétrocommission moyenne :</p>
+                <p id="p-comm">Rétrocommission souhaitée :</p>
                 <div class="small-comm-tag"><%= current_user.commission %>%</div>
               </li>
             <% else %>
@@ -124,17 +135,20 @@
       <div class="myprofile-reviews">
         <h4>Mes avis reçus</h4>
         <hr>
-        <% if current_user.reviews.size > 0 %>
-          <h4>
-            <span class="number-of-reviews"><strong>Moyenne : </strong></span>
-            <%= ("<i class='fa fa-star fa-yellow'></i>" * current_user.reviews.average(:rating).to_f.round).html_safe %><%= ("<i class='fa fa-star fa-gray'></i>" * (5 - current_user.reviews.average(:rating).to_f.round)).html_safe %>
-            <span class="number-of-reviews"> (<%= pluralize(current_user.reviews.size, 'avis reçu') %>)</span>
-          </h4>
-          <hr>
-          <% current_user.reviews.each do |review| %>
+        <% if current_user.reviews_i_received.size > 0 %>
+          <% current_user.reviews_i_received.order(created_at: :desc).each do |review| %>
             <div class="review">
-              <p>"<em><%= review.content %></p></em>" by <%= review.reviewer.first_name %> <%= review.reviewer.first_name %></p>
+              <p><em>"<%= review.content %>"</em></p>
+              <p>
+              <%= ("<i class='fa fa-star fa-yellow'></i>" * review.rating).html_safe %><%= ("<i class='fa fa-star fa-gray'></i>" * (5 - review.rating)).html_safe %>
+              <span class="reviewer-name">de
+              <%= link_to user_path(review.reviewer) do %>
+                <%= review.reviewer.first_name %> <%= review.reviewer.last_name %>
+              <% end %>
+                , le <%= review.created_at.strftime('%d/%m/%Y') %></span>
+              </p>
             </div>
+            <hr>
           <% end %>
         <% else %>
         <div class="empty-comment">
