calendar view divided in three

--- a/app/assets/stylesheets/pages/_calendar.scss
+++ b/app/assets/stylesheets/pages/_calendar.scss
@@ -29,8 +29,9 @@
     margin-bottom: 50px;
     }
 }
-.availabilities{
+.incoming_demands{
   border-right: 1px solid #333333;
+  border-left: 1px solid #333333;
 }
 .fa-calendar-minus-o{
    font-size: 40px;
