--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -68,20 +68,25 @@
         <div class="col-xs-12 col-md-4">
           <div class="user_availabilities grey_card">
           <h4>Choisissez un créneau de remplacement : </h4>
-            <% @user.slots.each do |slot| %>
-              <ul class="list-inline list-unstyled">
-                <% if current_user.numero_ordre.nil? %>
-                  <ul class="list-unstyled">
-                    <li class= "single_dispo"><%= link_to "#{slot.start_date} au #{slot.end_date}", user_bookings_path(@user, user_id: current_user.id,slot_id: slot.id, start_date: slot.start_date, end_date: slot.end_date), data: {toggle: "modal", target: "#contacter"}%>
-                    </li>
-                  </ul>
-                <% else %>
-                  <ul class="list-unstyled">
-                    <li class= "single_dispo"><%= link_to "#{slot.start_date} au #{slot.end_date}", user_bookings_path(@user, user_id: current_user.id, slot_id: slot.id, start_date: slot.start_date, end_date: slot.end_date), method: :post, data: { confirm: "Etes-vous sûr(e) ?" }, class: "" %>
-                    </li>
-                  </ul>
-                <% end %>
-              </ul>
+          <% if @user.slots.nil? %>
+            ppp
+          <%else%>
+
+              <% @user.slots.each do |slot| %>
+                <ul class="list-inline list-unstyled">
+                  <% if current_user.numero_ordre.nil? %>
+                    <ul class="list-unstyled">
+                      <li class= "single_dispo"><%= link_to "#{slot.start_date} au #{slot.end_date}", user_bookings_path(@user, user_id: current_user.id,slot_id: slot.id, start_date: slot.start_date, end_date: slot.end_date), data: {toggle: "modal", target: "#contacter"}%>
+                      </li>
+                    </ul>
+                  <% else %>
+                    <ul class="list-unstyled">
+                      <li class= "single_dispo"><%= link_to "#{slot.start_date} au #{slot.end_date}", user_bookings_path(@user, user_id: current_user.id, slot_id: slot.id, start_date: slot.start_date, end_date: slot.end_date), method: :post, data: { confirm: "Etes-vous sûr(e) ?" }, class: "" %>
+                      </li>
+                    </ul>
+                  <% end %>
+                </ul>
+              <% end %>
             <% end %>
             </div>
             <div class="description-profil grey_card">
