--- a/app/views/calendars/show.html.erb
+++ b/app/views/calendars/show.html.erb
@@ -26,7 +26,7 @@
 <div class="demands">
   <div class="container">
     <div class="row-fluid">
-      <div class="availabilities text-center col-sm-12 col-md-6">
+      <div class="availabilities text-center col-sm-12 col-md-4">
         <% if current_user.has_practice? %>
           <h4>Les dates où je recherche des remplaçants</h4>
         <% else %>
@@ -45,14 +45,16 @@
           <% end %>
         <% end %>
       </div>
-      <div class="incoming_demands text-center col-sm-12 col-md-6">
-        <h4>Les demandes entrantes de remplacement</h4>
+      <div class="incoming_demands text-center col-sm-12 col-md-4">
+        <h4>Les demandes reçues de remplacements</h4>
         <% if current_user.slots.first.nil? %>
           <i class="fa fa-user-md"></i>
-          <div class="empty_availabilities">Vous n'avez pas encore reçu de demandes <br> Commencez par remplir votre calendrier ci-dessus et valider vos plages</div>
+          <div class="empty_availabilities">Vous n'avez pas encore reçu de demande <br> Commencez par remplir votre calendrier ci-dessus et valider vos plages</div>
         <% else %>
         <% end %>
-
+      </div>
+      <div class = "text-center col-sm-12 col-md-4">
+        <h4>Les demandes envoyées de remplacements</h4>
         <% if current_user.has_practice == false %>
           <!-- Je suis un remplaçant ! -->
           <% if current_user.bookings.nil? %>
