front on incoming requests

--- a/app/assets/stylesheets/pages/_calendar.scss
+++ b/app/assets/stylesheets/pages/_calendar.scss
@@ -52,3 +52,9 @@
   font-weight: lighter;
   margin: 0px 230px;
 }
+.sent-requests{
+  background-color: white;
+  border-radius: 8px;
+  padding: 10px;
+  margin: 20px;
+}
