--- a/app/assets/stylesheets/pages/_calendar.scss
+++ b/app/assets/stylesheets/pages/_calendar.scss
@@ -7,7 +7,7 @@
 }
 .demands{
   width: 100%;
-  height: 70vh;
+  // height: 70vh;
   margin-left: auto;
   margin-right: auto;
   max-width: initial;
@@ -52,7 +52,7 @@
   font-weight: lighter;
   margin: 0px 230px;
 }
-.sent-requests{
+.requests{
   background-color: white;
   border-radius: 8px;
   padding: 10px;
