--- a/app/views/calendars/show.html.erb
+++ b/app/views/calendars/show.html.erb
@@ -26,6 +26,7 @@
 <div class="demands">
   <div class="container">
     <div class="row-fluid">
+
       <div class="availabilities text-center col-sm-12 col-md-4">
         <% if current_user.has_practice? %>
           <h4>Les dates où je recherche des remplaçants</h4>
@@ -45,23 +46,40 @@
           <% end %>
         <% end %>
       </div>
+
       <div class="incoming_demands text-center col-sm-12 col-md-4">
         <h4>Les demandes reçues de remplacements</h4>
+        <!-- Je suis un cabinet ! -->
         <% if current_user.slots.first.nil? %>
-          <i class="fa fa-user-md"></i>
-          <div class="empty_availabilities">Vous n'avez pas encore reçu de demande <br> Commencez par remplir votre calendrier ci-dessus et valider vos plages</div>
+          <h5> Vous n'avez pas encore reçu de demande <br> Commencez par remplir votre calendrier ci-dessus et valider vos plages</h5>
         <% else %>
+          <% current_user.slots.each do |slot| %>
+            <% slot.bookings.each do |booking| %>
+            <div class="requests">
+
+              <% if booking.user.avatar.nil? %>
+                <%= image_tag "placeholder_pic.png", class: "avatar-large" %>
+              <% else %>
+                <%= image_tag booking.user.avatar, class: "avatar-superextralarge " %>
+              <% end %>
+              Dr <%= booking.user.first_name %> <%= booking.user.last_name %> <br>
+              souhaiterait vous remplacer <br>
+              Du<%= l(booking.start_date, format: "%e %B %Y")  %>
+              Au <%= l(booking.end_date, format: "%e %B %Y")  %> <br>
+            </div>
+            <% end %>
+          <% end %>
         <% end %>
       </div>
-      <div class = "text-center col-sm-12 col-md-4">
+
+      <div class = "outcoming_demands text-center col-sm-12 col-md-4">
         <h4>Les demandes envoyées de remplacements</h4>
-        <% if current_user.has_practice == false %>
-          <!-- Je suis un remplaçant ! -->
+        <% if current_user.has_practice == false %> <!-- Je suis un remplaçant ! -->
           <% if current_user.bookings.nil? %>
             <p> Vous n'avez pas encore fait de demande !</p>
           <% else %>
             <% current_user.bookings.each do |booking| %>
-          <div class="sent-requests">
+          <div class="requests">
             <% if booking.slot.user.avatar.nil? %>
               <%= image_tag "placeholder_pic.png", class: "avatar-large" %>
             <% else %>
@@ -74,44 +92,11 @@
                 <div class="status"><strong>...Status...</strong></div>
                 <br>
           </div>
-              <%# else %>
-                <%# booking.slots.each do |slot| %>
-                  <%#= slot.status %>
-                  <%#= slot.user.first_name %>
-                <%# end %>
-              <% end %>
-            <% end %>
-        <% else %>
-        <!-- Je suis un cabinet ! -->
-          <% if current_user.slots.first.nil? %>
-            <p> On ne vous a pas encore fait de demande !</p>
-          <% else %>
-            <% current_user.slots.each do |slot| %>
-              <% slot.bookings.each do |booking| %>
-                <% if booking.user.avatar.nil? %>
-                  <%= image_tag "placeholder_pic.png", class: "avatar-large" %>
-                <% else %>
-                  <%= image_tag booking.user.avatar, class: "avatar-superextralarge " %>
-                <% end %>
-                <%= booking.user.first_name %> souhiaterait vous remplacer du :
-                <%= l(booking.start_date, format: "%e %B %Y")  %> au
-                <%= l(booking.end_date, format: "%e %B %Y")  %>
-                <%# booking.slots.each do |slot| %>
-                  <%# if slot.status == "pending" %>
-                    <%#= link_to "Valider", confirm_booking_path(booking), method: :patch, class: "btn btn-primary" %>
-                    <%#= link_to "Refuser", reject_booking_path(booking), method: :patch, class: "btn btn-danger" %>
-                  <%# else %>
-                    <div class="display-status">
-                      <%#= slot.status %>
-                      <%# break %>
-                    </div>
-                  <%# end %>
-                <%# end %>
-              <% end %>
             <% end %>
           <% end %>
-        <% end %>
+        <% end %><!-- Je suis un cabinet ! -->
       </div>
+
     </div>
   </div>
 </div>
